# Hackathon-2024-ML-models-in-BQML-and-Vertex-AI

./: README.md  pyproject.toml  tox.ini
hackathon_bqml/: anomaly_detection_visualization.py  model_visualization.py
hackathon_bqml_dbt/: dbt_project.yml  generate_models.py  package-lock.yml  packages.yml
hackathon_bqml_dbt/macros/: arima_plus_xreg.sql  evaluate_arima_plus_xreg.sql  explain_arima_plus_xreg.sql  forecast_arima_plus_xreg.sql
hackathon_bqml_dbt/models/hourly_energy_pjm/: anomaly_detection_arima_model.sql  arima_coefficients.sql  evaluate_arima_model.sql  explain_forecast_arima_model.sql  explain_forecast_arima_plus_xreg_model.sql  forecast_arima_model.sql  forecast_arima_plus_xreg_model.sql
reference/: Hackthon Idea.docx
